# ricketyapps

./: .gitignore  Cargo.toml  README.md  features.md  fmt.sh  leptosfmt.toml
api/: Cargo.toml
api/src/: main.rs
app/: Cargo.toml
app/src/: lib.rs  ssr.rs
app/src/core/admin/: mod.rs
app/src/core/auth/: mod.rs  ssr.rs
common/: Cargo.toml
common/src/: db.rs  state.rs
core-libs/: Cargo.toml
core-libs/src/: db.rs
domains/: Cargo.toml
domains/src/: lib.rs
domains/src/places/: api.rs  entity.rs
domains/src/users/: api.rs  entity.rs
frontend/: Cargo.toml
leptos-app/: Cargo.toml
leptos-app/src/: lib.rs  main.rs
leptos-app/src/app/auth/entity/: mod.rs  user.rs
leptos-app/src/app/auth/views/: register.rs
leptos-app/src/auth/: mod.rs  utils.rs
leptos-app/src/auth/entity/: user.rs
leptos-app/src/auth/views/: login.rs  logout.rs  register.rs
leptos-app/src/ssr/: contexts.rs  mod.rs
leptos-server/: Cargo.toml
leptos-server/src/: main.rs
lib/app/: Cargo.toml
lib/app/src/: lib.rs  welds_helper.rs
lib/app_helpers/src/: axum_welds.rs
lib/core/app_helpers/: Cargo.toml
lib/core/app_helpers/src/: lib.rs
lib/core/db/: Cargo.toml
lib/db/: Cargo.toml
lib/db/src/: lib.rs
lib/models/: Cargo.toml
lib/models/src/: lib.rs
migrations/: 20250514114808_create-places.down.sql  20250514114808_create-places.up.sql  20250520225716_create-users.up.sql  20250521095432_add-datetimes-to-place-user.up.sql  20250614053213_create_trigger_function.down.sql  20250614053213_create_trigger_function.up.sql  20250614053339_create_users_table.down.sql  20250614053339_create_users_table.up.sql  20250614055442_create_trips_table.down.sql  20250614055442_create_trips_table.up.sql  20250614153339_create_users_table.up.sql  20250615065848_add_accommodation_address_booking_tables.down.sql  20250615065848_add_accommodation_address_booking_tables.up.sql  20250618121802_create_tasks_table.down.sql  20250618121802_create_tasks_table.up.sql  20250620104722_add_status_to_tasks.down.sql  20250620104722_add_status_to_tasks.up.sql  20250622182026_update_status_on_tasks.down.sql  20250622182026_update_status_on_tasks.up.sql
modules/auth/: Cargo.toml
modules/auth/src/: lib.rs
modules/auth/src/dto/: mod.rs
modules/auth/src/entities/: mod.rs
modules/auth/src/mappers/: mod.rs
modules/auth/src/views/: login.rs  logout.rs  mod.rs  register.rs
modules/tasks/: Cargo.toml
modules/tasks/src/: lib.rs
modules/tasks/src/dto/: mod.rs
modules/tasks/src/entities/: mod.rs
modules/tasks/src/views/: index.rs  list.rs  mod.rs
server/: Cargo.toml
server/src/: main.rs
src/: app.rs  contexts.rs  db.rs  lib.rs  main.rs  state.rs
src/app/auth/: login.rs  mod.rs  register.rs  ssr.rs  user.rs  utils.rs
src/app/auth/entity/: mod.rs  user.rs
src/app/auth/views/: login.rs  logout.rs  mod.rs  register.rs
src/app/places/: mod.rs
src/app/planner/: mod.rs
src/app/planner/entity/: mod.rs
src/app/planner/views/: mod.rs
src/app/planner/views/trips/: add.rs  details.rs  list.rs  mod.rs
style/: main.scss
ugh/: Cargo.toml
ugh/app/: Cargo.toml
ugh/app/src/: lib.rs
ugh/app/src/admin/: mod.rs
ugh/migrations/: 20250521095432_add-datetimes-to-place-user.down.sql
ugh/modules/places/: Cargo.toml
ugh/modules/places/src/model/: mod.rs
ugh/modules/places/src/view/: mod.rs
ugh/rickety/: Cargo.toml
ugh/rickety/src/: lib.rs
ugh/rickety/src/auth/: mod.rs  ssr.rs
ugh/rickety/src/db/: mod.rs
ugh/server/: Cargo.toml
ugh/server/src/: main.rs
views/: Cargo.toml
views/src/: lib.rs
