[workspace]
resolver = "2"
members = ['api', "lib/*"]

[workspace.dependencies]
db = { path = "lib/db" }
models = { path = "lib/models" }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
tokio = "1.45.0"
dotenvy = "0.15"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }