[workspace]
resolver = "2"
members = ['api', "lib/*", "domains"]

[workspace.dependencies]
app = { path = "lib/app" }
db = { path = "lib/db" }
domains = { path = "domains" }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
tokio = "1.45.0"
dotenvy = "0.15"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
welds = { version = "0.4", features = ["postgres", "migrations"] }
utility-types = "*"