[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
license = "AGPL-3"
publish = false

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[workspace]
resolver = "2"
members = ["app", "modules/*", "server"]

[workspace.dependencies]
auth = { path = "modules/auth" }
tasks = { path = "modules/tasks" }
common = { path = "common" }

# data layer
uuid = { version = "1", features = ["v4", "js", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid", "chrono"] }
welds = { version = "0.4", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.20", features = ["derive"] }

#error handling
thiserror = "2.0"
anyhow = "1.0"

#auth
argon2 = { version = "0.5", features = ["rand"] }
# 0.9 is not compatible with argon 0.5 salt
rand = { version = "0.8" }
secrecy = "0.10"

#axum
tokio = { version = "1", features = ["rt-multi-thread"] }
axum = { version = "0.8.0", features = ["default", "macros"] }

# leptos
leptos = { version = "0.8.0", features = ["nightly"] }
leptos_router = { version = "0.8.0", features = ["nightly"] }
leptos_meta = { version = "0.8.0" }
leptos_axum = { version = "0.8.0" }

#axum session management
axum_session = { version = "0.16" }
axum_session_sqlx = { version = "0.5" }
axum_session_auth = { version = "0.16" }
async-trait = { version = "0.1" }

# other leptos recommended
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
simple_logger = "5"
wasm-bindgen = "=0.2.100"

#leptos 3rd party
thaw = { version = "0.5.0-beta", features = ["nightly"] }

# misc
dotenvy = "0.15"

[[workspace.metadata.leptos]]

bin-package = "server"

lib-package = "app"

# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
name = "rickety-apps"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your api setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the api serves the content. Use it in your api setup.
site-addr = "127.0.0.1:3009"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = []

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
