[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# repo deps
db.workspace = true
models.workspace = true
# shared deps
dotenvy.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# local deps
axum = "0.8"
tower-http = { version = "0.6", features = ["normalize-path", 'cors', 'fs'] }
tower-layer = "0.3"