[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# repo deps
app.workspace = true
db.workspace = true
domains.workspace = true
# shared deps
dotenvy.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
welds.workspace = true
# local deps
axum = { version = "0.8", features = ["default", "macros"] }
tower-http = { version = "0.6", features = ["normalize-path", 'cors', 'fs'] }
tower-layer = "0.3"