[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth.workspace = true
tasks.workspace = true

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }


thiserror.workspace = true
wasm-bindgen.workspace = true
log.workspace = true

console_error_panic_hook.workspace = true
console_log.workspace = true

#leptos 3rd party
thaw = { workspace = true }

[features]
default = []
hydrate = ["leptos/hydrate", "thaw/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "thaw/ssr"]

