[package]
name = "leptos-server"
version = "0.1.0"
edition = "2024"

[dependencies]
core-libs = { path = "../core-libs" }
leptos-app = { path = "../leptos-app", features = ["ssr"] }

dotenvy = "0.15"


leptos = { version = "0.8.0", features = ["nightly"] }
leptos_router = { version = "0.8.0", features = ["nightly", "ssr"], optional = true }
axum = { version = "0.8.0", features = ["default", "macros"], optional = true }

console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8.0", optional = true }
leptos_meta = { version = "0.8.0", features = ["ssr"] }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
wasm-bindgen = { version = "=0.2.100", optional = true }

serde = { version = "1.0", features = ["derive"] }
#todo: work out if this will be causing issues on server
# error: to use `uuid` on `wasm32-unknown-unknown`, specify a source of randomness using one of the `js`, `rng-getrandom`, or `rng-rand` features
uuid = { version = "1.17.0", features = ["v4", "js", "serde"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid", "chrono"], optional = true }
chrono = { version = "0.4", features = ["default", "serde"] }

argon2 = { version = "0.5", features = ["rand"], optional = true }
# 0.9 is not compatible with argon salt
rand = { version = "0.8", optional = true }

axum_session = { version = "0.16", optional = true }
axum_session_sqlx = { version = "0.5", optional = true }
axum_session_auth = { version = "0.16", optional = true }

welds = { version = "0.4", features = ["postgres"], optional = true }

[features]
ssr = [
    "argon2",
    "rand",
    "axum",
    "axum_session",
    "axum_session_sqlx",
    "axum_session_auth",
    "tokio",
    "leptos_axum",
    "sqlx",
    "welds",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]