[package]
name = "views"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos.workspace = true
#leptos_meta.workspace = true
#leptos_router.workspace = true
#leptos_axum = { workspace = true, optional = true }

#http.workspace = true
#cfg-if.workspace = true
#thiserror.workspace = true

#[features]
#default = []
#hydrate = ["leptos/hydrate"]
#ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]

