[package]
name = "auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
common = { workspace = true, optional = true }

serde.workspace = true
uuid.workspace = true
thiserror.workspace = true

sqlx = { workspace = true, optional = true }
welds = { workspace = true, optional = true }

# password hashes
argon2 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

axum = { workspace = true, optional = true }
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos_axum = { workspace = true, optional = true }

# axum session management
axum_session = { workspace = true, optional = true }
axum_session_sqlx = { workspace = true, optional = true }
axum_session_auth = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
anyhow.workspace = true

[features]
ssr = [
    "common",
    "async-trait",
    "axum_session",
    "axum_session_sqlx",
    "axum_session_auth",
    "axum",
    "sqlx",
    "welds",
    "argon2",
    "rand",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum"
]

