[package]
name = "tasks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
common = { workspace = true, optional = true }
leptos = { workspace = true }
leptos_router = { workspace = true }
serde = { workspace = true }

sqlx = { workspace = true, optional = true }
welds = { workspace = true, optional = true }

uuid = { workspace = true }

[features]
ssr = [
    "common",
    "sqlx",
    "welds",
]
